--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "react-mesto-auth",
-  "homepage": "https://blyaderuiner.github.io/react-mesto-auth",
+  "name": "react-mesto",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "gh-pages": "^5.0.0",
     "npm-check-updates": "^16.10.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
